// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a colored sticky note 1`] = `
<div
  node={<body />}
>
  <div
    className="react-draggable"
    disabled={true}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    resizable={true}
    style={
      Object {
        "boxSizing": "border-box",
        "cursor": "auto",
        "display": "inline-block",
        "flexShrink": 0,
        "height": "auto",
        "left": 0,
        "maxHeight": 500,
        "maxWidth": 500,
        "minHeight": 200,
        "minWidth": 200,
        "position": "absolute",
        "top": 0,
        "transform": "translate(30px,30px)",
        "userSelect": "auto",
        "width": "300px",
      }
    }
    transform={null}
  >
    <div
      className="sticky-note-outer"
      style={
        Object {
          "WebkitFilter": "hue-rotate(320deg) saturate(70%)",
          "filter": "hue-rotate(320deg) saturate(70%)",
        }
      }
    >
      <div
        className="sticky-note"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="sticky-note-controls"
        />
        <div
          className="sticky-note-content"
        >
          <div
            className="sticky-note-title"
          >
            My note
          </div>
          <div
            className="sticky-note-date"
          >
            
          </div>
          <div
            className="sticky-note-body"
          >
            Text body of note
          </div>
        </div>
      </div>
    </div>
    <span>
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "bottom": "-5px",
            "cursor": "row-resize",
            "height": "10px",
            "left": "0px",
            "position": "absolute",
            "userSelect": "none",
            "width": "100%",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "bottom": "-10px",
            "cursor": "sw-resize",
            "height": "20px",
            "left": "-10px",
            "position": "absolute",
            "userSelect": "none",
            "width": "20px",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "bottom": "-10px",
            "cursor": "se-resize",
            "height": "20px",
            "position": "absolute",
            "right": "-10px",
            "userSelect": "none",
            "width": "20px",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "cursor": "col-resize",
            "height": "100%",
            "left": "-5px",
            "position": "absolute",
            "top": "0px",
            "userSelect": "none",
            "width": "10px",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "cursor": "col-resize",
            "height": "100%",
            "position": "absolute",
            "right": "-5px",
            "top": "0px",
            "userSelect": "none",
            "width": "10px",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "cursor": "row-resize",
            "height": "10px",
            "left": "0px",
            "position": "absolute",
            "top": "-5px",
            "userSelect": "none",
            "width": "100%",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "cursor": "nw-resize",
            "height": "20px",
            "left": "-10px",
            "position": "absolute",
            "top": "-10px",
            "userSelect": "none",
            "width": "20px",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "cursor": "ne-resize",
            "height": "20px",
            "position": "absolute",
            "right": "-10px",
            "top": "-10px",
            "userSelect": "none",
            "width": "20px",
          }
        }
      />
    </span>
  </div>
</div>
`;

exports[`renders a minimizable sticky note 1`] = `
<div
  node={<body />}
>
  <div
    className="react-draggable"
    disabled={true}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    resizable={true}
    style={
      Object {
        "boxSizing": "border-box",
        "cursor": "auto",
        "display": "inline-block",
        "flexShrink": 0,
        "height": "auto",
        "left": 0,
        "maxHeight": 500,
        "maxWidth": 500,
        "minHeight": 200,
        "minWidth": 200,
        "position": "absolute",
        "top": 0,
        "transform": "translate(30px,30px)",
        "userSelect": "auto",
        "width": "300px",
      }
    }
    transform={null}
  >
    <div
      className="sticky-note-outer"
      style={Object {}}
    >
      <div
        className="sticky-note"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="sticky-note-controls"
        >
          <div
            className="sticky-note-minimizable"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
            title="click-to-minimize"
          >
            <i
              className="fas fa-window-minimize"
            />
          </div>
        </div>
        <div
          className="sticky-note-content"
        >
          <div
            className="sticky-note-title"
          >
            My note
          </div>
          <div
            className="sticky-note-date"
          >
            
          </div>
          <div
            className="sticky-note-body"
          >
            Text body of note
          </div>
        </div>
      </div>
    </div>
    <span>
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "bottom": "-5px",
            "cursor": "row-resize",
            "height": "10px",
            "left": "0px",
            "position": "absolute",
            "userSelect": "none",
            "width": "100%",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "bottom": "-10px",
            "cursor": "sw-resize",
            "height": "20px",
            "left": "-10px",
            "position": "absolute",
            "userSelect": "none",
            "width": "20px",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "bottom": "-10px",
            "cursor": "se-resize",
            "height": "20px",
            "position": "absolute",
            "right": "-10px",
            "userSelect": "none",
            "width": "20px",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "cursor": "col-resize",
            "height": "100%",
            "left": "-5px",
            "position": "absolute",
            "top": "0px",
            "userSelect": "none",
            "width": "10px",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "cursor": "col-resize",
            "height": "100%",
            "position": "absolute",
            "right": "-5px",
            "top": "0px",
            "userSelect": "none",
            "width": "10px",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "cursor": "row-resize",
            "height": "10px",
            "left": "0px",
            "position": "absolute",
            "top": "-5px",
            "userSelect": "none",
            "width": "100%",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "cursor": "nw-resize",
            "height": "20px",
            "left": "-10px",
            "position": "absolute",
            "top": "-10px",
            "userSelect": "none",
            "width": "20px",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "cursor": "ne-resize",
            "height": "20px",
            "position": "absolute",
            "right": "-10px",
            "top": "-10px",
            "userSelect": "none",
            "width": "20px",
          }
        }
      />
    </span>
  </div>
</div>
`;

exports[`renders a sticky note 1`] = `null`;

exports[`renders a sticky note with a date 1`] = `
<div
  node={<body />}
>
  <div
    className="react-draggable"
    disabled={true}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    resizable={true}
    style={
      Object {
        "boxSizing": "border-box",
        "cursor": "auto",
        "display": "inline-block",
        "flexShrink": 0,
        "height": "auto",
        "left": 0,
        "maxHeight": 500,
        "maxWidth": 500,
        "minHeight": 200,
        "minWidth": 200,
        "position": "absolute",
        "top": 0,
        "transform": "translate(30px,30px)",
        "userSelect": "auto",
        "width": "300px",
      }
    }
    transform={null}
  >
    <div
      className="sticky-note-outer"
      style={Object {}}
    >
      <div
        className="sticky-note"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="sticky-note-controls"
        />
        <div
          className="sticky-note-content"
        >
          <div
            className="sticky-note-title"
          >
            My note
          </div>
          <div
            className="sticky-note-date"
          >
            01/20/2020
          </div>
          <div
            className="sticky-note-body"
          >
            Text body of note
          </div>
        </div>
      </div>
    </div>
    <span>
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "bottom": "-5px",
            "cursor": "row-resize",
            "height": "10px",
            "left": "0px",
            "position": "absolute",
            "userSelect": "none",
            "width": "100%",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "bottom": "-10px",
            "cursor": "sw-resize",
            "height": "20px",
            "left": "-10px",
            "position": "absolute",
            "userSelect": "none",
            "width": "20px",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "bottom": "-10px",
            "cursor": "se-resize",
            "height": "20px",
            "position": "absolute",
            "right": "-10px",
            "userSelect": "none",
            "width": "20px",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "cursor": "col-resize",
            "height": "100%",
            "left": "-5px",
            "position": "absolute",
            "top": "0px",
            "userSelect": "none",
            "width": "10px",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "cursor": "col-resize",
            "height": "100%",
            "position": "absolute",
            "right": "-5px",
            "top": "0px",
            "userSelect": "none",
            "width": "10px",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "cursor": "row-resize",
            "height": "10px",
            "left": "0px",
            "position": "absolute",
            "top": "-5px",
            "userSelect": "none",
            "width": "100%",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "cursor": "nw-resize",
            "height": "20px",
            "left": "-10px",
            "position": "absolute",
            "top": "-10px",
            "userSelect": "none",
            "width": "20px",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "cursor": "ne-resize",
            "height": "20px",
            "position": "absolute",
            "right": "-10px",
            "top": "-10px",
            "userSelect": "none",
            "width": "20px",
          }
        }
      />
    </span>
  </div>
</div>
`;

exports[`renders a sticky note with a stain 1`] = `
<div
  node={<body />}
>
  <div
    className="react-draggable"
    disabled={true}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    resizable={true}
    style={
      Object {
        "boxSizing": "border-box",
        "cursor": "auto",
        "display": "inline-block",
        "flexShrink": 0,
        "height": "auto",
        "left": 0,
        "maxHeight": 500,
        "maxWidth": 500,
        "minHeight": 200,
        "minWidth": 200,
        "position": "absolute",
        "top": 0,
        "transform": "translate(30px,30px)",
        "userSelect": "auto",
        "width": "300px",
      }
    }
    transform={null}
  >
    <div
      className="sticky-note-outer"
      style={Object {}}
    >
      <div
        className="sticky-note"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="sticky-note-controls"
        />
        <div
          className="sticky-note-content"
        >
          <div
            className="sticky-note-title"
          >
            My note
          </div>
          <div
            className="sticky-note-date"
          >
            
          </div>
          <div
            className="sticky-note-body"
          >
            Text body of note
          </div>
        </div>
      </div>
    </div>
    <span>
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "bottom": "-5px",
            "cursor": "row-resize",
            "height": "10px",
            "left": "0px",
            "position": "absolute",
            "userSelect": "none",
            "width": "100%",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "bottom": "-10px",
            "cursor": "sw-resize",
            "height": "20px",
            "left": "-10px",
            "position": "absolute",
            "userSelect": "none",
            "width": "20px",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "bottom": "-10px",
            "cursor": "se-resize",
            "height": "20px",
            "position": "absolute",
            "right": "-10px",
            "userSelect": "none",
            "width": "20px",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "cursor": "col-resize",
            "height": "100%",
            "left": "-5px",
            "position": "absolute",
            "top": "0px",
            "userSelect": "none",
            "width": "10px",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "cursor": "col-resize",
            "height": "100%",
            "position": "absolute",
            "right": "-5px",
            "top": "0px",
            "userSelect": "none",
            "width": "10px",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "cursor": "row-resize",
            "height": "10px",
            "left": "0px",
            "position": "absolute",
            "top": "-5px",
            "userSelect": "none",
            "width": "100%",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "cursor": "nw-resize",
            "height": "20px",
            "left": "-10px",
            "position": "absolute",
            "top": "-10px",
            "userSelect": "none",
            "width": "20px",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "cursor": "ne-resize",
            "height": "20px",
            "position": "absolute",
            "right": "-10px",
            "top": "-10px",
            "userSelect": "none",
            "width": "20px",
          }
        }
      />
    </span>
  </div>
</div>
`;

exports[`renders an editable sticky note 1`] = `
<div
  node={<body />}
>
  <div
    className="react-draggable"
    disabled={true}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    resizable={true}
    style={
      Object {
        "boxSizing": "border-box",
        "cursor": "auto",
        "display": "inline-block",
        "flexShrink": 0,
        "height": "auto",
        "left": 0,
        "maxHeight": 500,
        "maxWidth": 500,
        "minHeight": 200,
        "minWidth": 200,
        "position": "absolute",
        "top": 0,
        "transform": "translate(30px,30px)",
        "userSelect": "auto",
        "width": "300px",
      }
    }
    transform={null}
  >
    <div
      className="sticky-note-outer"
      style={Object {}}
    >
      <div
        className="sticky-note"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="sticky-note-controls"
        />
        <div
          className="sticky-note-content"
        >
          <div
            className="sticky-note-title editable"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
          >
            My note
          </div>
          <div
            className="sticky-note-body editable"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
          >
            Text body of note
          </div>
        </div>
      </div>
    </div>
    <span>
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "bottom": "-5px",
            "cursor": "row-resize",
            "height": "10px",
            "left": "0px",
            "position": "absolute",
            "userSelect": "none",
            "width": "100%",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "bottom": "-10px",
            "cursor": "sw-resize",
            "height": "20px",
            "left": "-10px",
            "position": "absolute",
            "userSelect": "none",
            "width": "20px",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "bottom": "-10px",
            "cursor": "se-resize",
            "height": "20px",
            "position": "absolute",
            "right": "-10px",
            "userSelect": "none",
            "width": "20px",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "cursor": "col-resize",
            "height": "100%",
            "left": "-5px",
            "position": "absolute",
            "top": "0px",
            "userSelect": "none",
            "width": "10px",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "cursor": "col-resize",
            "height": "100%",
            "position": "absolute",
            "right": "-5px",
            "top": "0px",
            "userSelect": "none",
            "width": "10px",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "cursor": "row-resize",
            "height": "10px",
            "left": "0px",
            "position": "absolute",
            "top": "-5px",
            "userSelect": "none",
            "width": "100%",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "cursor": "nw-resize",
            "height": "20px",
            "left": "-10px",
            "position": "absolute",
            "top": "-10px",
            "userSelect": "none",
            "width": "20px",
          }
        }
      />
      <div
        className=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "cursor": "ne-resize",
            "height": "20px",
            "position": "absolute",
            "right": "-10px",
            "top": "-10px",
            "userSelect": "none",
            "width": "20px",
          }
        }
      />
    </span>
  </div>
</div>
`;
